archive: prevent wrap in date column

--- a/css/default.css
+++ b/css/default.css
@@ -146,6 +146,10 @@ p {
     hyphens: auto;
 }
 
+table#case-files td:nth-child(1) {
+    white-space: nowrap;
+}
+
 table#case-files td:nth-child(2) {
     text-align: center;
 }
